--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ visualstudio/VS2015/Release/framework.tlog/CL.command.1.tlog
 visualstudio/VS2015/Release/framework.tlog/framework.write.1u.tlog
 visualstudio/VS2015/Release/framework.tlog/link.read.1.tlog
 visualstudio/VS2015/Release/framework.tlog/link.write.1.tlog
+visualstudio/VS2015/Release/visualstudio.log
+visualstudio/VS2015/Release/framework.tlog/framework.write.1u.tlog
+visualstudio/VS2015/Release/framework.exe.recipe
