Skybox (mal hecha)

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ visualstudio/VS2015/Release/framework.tlog/link.write.1.tlog
 visualstudio/VS2015/Release/visualstudio.log
 visualstudio/VS2015/Release/framework.tlog/framework.write.1u.tlog
 visualstudio/VS2015/Release/framework.exe.recipe
+visualstudio/VS2015/Debug/vc143.idb
+visualstudio/VS2015/Release/framework.tlog/CL.command.1.tlog
+visualstudio/VS2015/Release/framework.tlog/framework.write.1u.tlog
+visualstudio/VS2015/Release/framework.tlog/link.read.1.tlog
+visualstudio/VS2015/Release/visualstudio.log
